# test_task

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/1/: main.py
src/2/src/: config.py  github_repos_scrapper.py  main.py
src/config/: config.py
src/task_1/: config.ini
src/task_1/src/: config.py  main.py
src/task_2/: config.ini
src/task_2/src/: config.py  github_repos_scrapper.py  main.py  rate_limiter.py
src/task_2/src/models/: repository.py
src/task_3/: config.ini  docker-compose.yml  schema.sql
src/task_3/src/: config.py  main.py
src/task_3/src/db/: clickhouse_client.py  repository_storage.py  tables.py
src/task_4/: query.sql
